[JVMCI] JVMCI should update the trap counters when invalidating for Reason_not_compiled_exception_handler

XMLWordPrintable

    • b22
    • generic
    • generic

      If a method is made not compilable Graal still keeps on trying to compile it:

      made not compilable on levels 0 1 2 3 4 lr::z (37 bytes) decompile_count > PerMethodRecompilationCutoff
       782311 11055 ! lr::z (37 bytes) made not entrant
            0 11056 lr::z(Object[], int) (37 bytes)
      made not compilable on levels 0 1 2 3 4 lr::z (37 bytes) decompile_count > PerMethodRecompilationCutoff
       783282 11056 ! lr::z (37 bytes) made not entrant
            0 11057 lr::z(Object[], int) (37 bytes)

            Assignee:
            Tom Rodriguez
            Reporter:
            Christian Thalinger (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: