8181858: [JVMCI] JVMCI should update the trap counters when invalidating for Reason_not_compiled_exception_handler

Reviewed-by: kvn